# website-builder

./: .gitignore  Cargo.toml  README.md
rsc/: robots.txt  website.json
rsc/resource/global script/: script.js
src/: blog_post.rs  main.rs  util.rs  website.rs
src/web/: component.rs  css.rs  html.rs  mod.rs
