[package]
name = "website_builder"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
indexmap = "2.1.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
markdown = "1.0.0-alpha.16"
chrono = { version = "0.4.31", features = ["serde"] }